--- a/.github/workflows/main_mercado-versátil.yml
+++ b/.github/workflows/main_mercado-versátil.yml
@@ -1,7 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
 name: Build and deploy Python app to Azure Web App - Mercado-Versátil
 
 on:
@@ -26,14 +22,23 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-      
+
       - name: Install dependencies
-        run: pip install -r requirements.txt
-        
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+        run: pip install -r projeto_fds/requirements.txt
+
+      - name: Cleaning testing files
+        run: |
+          cd projeto_fds/
+          rm db.sqlite3
+          rm .env
+          cd ..
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          cd projeto_fds/
+          zip release.zip ./* -r
+          cd ..
+          mv projeto_fds/release.zip .
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
@@ -50,7 +55,7 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write
 
     steps:
       - name: Download artifact from build job
@@ -61,7 +66,6 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -74,5 +78,3 @@ jobs:
         id: deploy-to-webapp
         with:
           app-name: 'Mercado-Versátil'
-          slot-name: 'Production'
-          
