--- a/.github/workflows/prod_projetofds.yml
+++ b/.github/workflows/prod_projetofds.yml
@@ -28,12 +28,23 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r projeto_fds/requirements.txt
         
+
+        - name: Cleaning testing files
+        run: |
+          cd projeto_fds/
+          rm db.sqlite3
+          rm .env
+          cd ..
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: |
+          cd projeto_fds/
+          zip release.zip ./* -r
+          cd ..
+          mv projeto_fds/release.zip .
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
